// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractorMarker Snapshot should match snapshot when not selected and not verified 1`] = `
<TouchableOpacity
  accessibilityLabel="Contractor marker"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onPress={[MockFunction]}
  style={
    [
      {
        "alignItems": "center",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#10B981",
        "borderRadius": 20,
        "borderWidth": 2,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-person"
    >
      person
      -
      20
      -
      #10B981
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`ContractorMarker Snapshot should match snapshot when not selected and verified 1`] = `
<TouchableOpacity
  accessibilityLabel="Contractor marker, verified"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onPress={[MockFunction]}
  style={
    [
      {
        "alignItems": "center",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#10B981",
        "borderRadius": 20,
        "borderWidth": 2,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-person"
    >
      person
      -
      20
      -
      #10B981
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#10B981",
        "borderColor": "#FFFFFF",
        "borderRadius": 8,
        "borderWidth": 2,
        "height": 16,
        "justifyContent": "center",
        "position": "absolute",
        "right": -2,
        "top": -2,
        "width": 16,
      }
    }
  >
    <Text
      testID="icon-checkmark"
    >
      checkmark
      -
      8
      -
      #FFFFFF
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`ContractorMarker Snapshot should match snapshot when selected and not verified 1`] = `
<TouchableOpacity
  accessibilityLabel="Contractor marker"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": true,
    }
  }
  onPress={[MockFunction]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "backgroundColor": "#10B981",
        "transform": [
          {
            "scale": 1.2,
          },
        ],
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#10B981",
        "borderRadius": 20,
        "borderWidth": 2,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-person"
    >
      person
      -
      20
      -
      #FFFFFF
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`ContractorMarker Snapshot should match snapshot when selected and verified 1`] = `
<TouchableOpacity
  accessibilityLabel="Contractor marker, verified"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": true,
    }
  }
  onPress={[MockFunction]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "backgroundColor": "#10B981",
        "transform": [
          {
            "scale": 1.2,
          },
        ],
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#10B981",
        "borderRadius": 20,
        "borderWidth": 2,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-person"
    >
      person
      -
      20
      -
      #FFFFFF
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#10B981",
        "borderColor": "#FFFFFF",
        "borderRadius": 8,
        "borderWidth": 2,
        "height": 16,
        "justifyContent": "center",
        "position": "absolute",
        "right": -2,
        "top": -2,
        "width": 16,
      }
    }
  >
    <Text
      testID="icon-checkmark"
    >
      checkmark
      -
      8
      -
      #FFFFFF
    </Text>
  </View>
</TouchableOpacity>
`;
